# pg2_practica_7.1

./: .gitignore  LICENCE  README.md  requisitos.txt  setup.cfg  setup.py
hight_bod_heavy/src/hight_bod_heavy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/example_package_Pg2_tecba/: __init__.py  primer_modulo.py
src/example_package_pg2_tecba.egg-info/: SOURCES.txt  top_level.txt
src/hight_bod_heavy/: __init__.py  hight_bod_heavy.py
src/hight_bod_heavy.egg-info/: PKG-INFO
test/: test.py
