[metadata]
name = example_package_pg2_tecba
version = 0.0.1
description = Reemplaza aquí con una descripción corta de tu paquete
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/yefeza/example_package_pg2_tecba
author = TU NOMBRE
author_email = tucorreo@example.com
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Topic :: Software Development

[options]
include_package_data = true
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where=src
